--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "firebase": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-redux": "^7.2.2",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
